# nebulus-core

./: .flake8  .gitignore  AI_DIRECTIVES.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  WORKFLOW.md  pyproject.toml  pyrightconfig.json
.claude/: README.md  config.json
docs/: AI_INSIGHTS.md
docs/plans/: 2026-02-03-phase2-data-layer.md  2026-02-03-phase3-intelligence.md  2026-02-03-phase4-cleanup-design.md  2026-02-03-phase4-cleanup.md  cleanup_20260207_phase1.md  cleanup_20260207_phase2.md  cleanup_20260207_phase3.md
extensions/ecosystem-watcher/: gemini-extension.json
src/nebulus_core/: __init__.py
tests/: conftest.py  test_platform.py
tests/mcp/: __init__.py  test_config.py  test_documents.py  test_filesystem.py  test_search.py  test_server.py  test_shell.py  test_web.py
tests/test_cli/: test_main.py  test_memory.py  test_models.py  test_output.py  test_services.py
tests/test_extensions/: test_sync_memory.py
tests/test_intelligence/: test_audit.py  test_classifier.py  test_feedback.py  test_ingest.py  test_insights.py  test_knowledge.py  test_orchestrator.py  test_pii.py  test_refinement.py  test_scoring.py  test_security.py  test_sql_engine.py  test_templates.py  test_vector_engine.py
tests/test_llm/: test_client.py
tests/test_mcp/: __init__.py  test_cli_tools.py  test_config.py  test_documents.py  test_filesystem.py  test_search.py  test_server.py  test_shell.py  test_web.py
tests/test_memory/: test_consolidator.py  test_graph_store.py  test_models.py  test_overlord.py
tests/test_security/: test_audit.py  test_encryption.py  test_migration.py  (+1 more)
(+63 files in other folders)
